--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@
 env/
 db
 
+frontend/app/.gitignore
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+frontend/app/node_modules
+frontend/app/.pnp
+frontend/app/.pnp.js
+
+# testing
+frontend/app/coverage
+
+# production
+frontend/app/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+frontend/app/npm-debug.log*
+frontend/app/yarn-debug.log*
+frontend/app/yarn-error.log*
+
