ignorar la ignorada

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 env/
 db
 
+frontend/app/.git
 frontend/app/.gitignore
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
