app segun doc oficial

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app.py .
-COPY ../env/client-secret.json .
+COPY client-secret.json .
 
-EXPOSE 3001
+EXPOSE 5000
 
 CMD ["python", "app.py"]
