--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,9 @@ FROM nginx
 
 EXPOSE 80
 
-RUN rm /usr/share/nginx/html/*
+#RUN rm /usr/share/nginx/html/*
 
-COPY configs/default.conf /etc/nginx/conf.d/default.conf
+#COPY configs/default.conf /etc/nginx/conf.d/default.conf
+COPY configs/confite.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx","-g","daemon off;"]
