--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -1,24 +1,41 @@
 upstream backend {
-    server backend:3001;
+    server backend:5000;
 }
 
-upstream frontend {
-    server frontend:3000;
-}
+
+#upstream frontend {
+#    server frontend:3000;
+#}
+
 
 server {
     listen 80;
 
+    #location /api {
+    #   proxy_pass http://backend;
+    #}
 
-    location /callback {
+    location / { #HOME
         proxy_pass http://backend;
-    }
-
-    location /api {
-        proxy_pass http://backend;
-    }
-
-    location / {
-        proxy_pass http://frontend;
     }
 }
+
+
+
+#server {
+#    listen 80;
+
+#    location / {
+#        auth_request /_oauth2_token_introspection;                              
+#        proxy_pass http://backend;
+#    }
+
+#    location = /_oauth2_token_introspection {
+#        internal;
+#        proxy_method      POST;
+#        proxy_set_header  Authorization "bearer SecretForOAuthServer";
+#        proxy_set_header  Content-Type "application/x-www-form-urlencoded";
+#        proxy_set_body    "token=$http_apikey&token_hint=access_token";
+#        proxy_pass        https://idp.example.com/oauth/token;
+#    }
+#}
