--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.11.1
+anyio==4.2.0
+Authlib==1.3.0
 blinker==1.6.2
 cachelib==0.10.2
 cachetools==5.3.1
@@ -7,15 +9,23 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 cryptography==41.0.1
-Flask==2.3.2
+Flask==3.0.1
 Flask-Migrate==4.0.4
 Flask-MySQL==1.5.2
 Flask-Script==2.0.6
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.5
-google-auth==2.21.0
-google-auth-oauthlib==1.0.0
+google-api-core==2.15.0
+google-api-python-client==2.115.0
+google-auth==2.27.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
 greenlet==2.0.2
+h11==0.14.0
+httpcore==1.0.2
+httplib2==0.22.0
+httpx==0.26.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -31,13 +41,17 @@ protobuf==3.20.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+PyJWT==2.8.0
 PyMySQL==1.1.0
+pyparsing==3.1.1
 python-dotenv==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.17
 typing_extensions==4.7.0
+uritemplate==4.1.1
 urllib3==1.26.16
-Werkzeug==2.3.6
+Werkzeug==3.0.1
